Bug 87470 - An event re-targeting algorithm does not set event's target correctly for multiple shadow roots.
Summary: An event re-targeting algorithm does not set event's target correctly for mul...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hayato Ito
URL:
Keywords:
Depends on:
Blocks: 59805
  Show dependency treegraph
 
Reported: 2012-05-25 01:11 PDT by Hayato Ito
Modified: 2012-06-18 15:58 PDT (History)
6 users (show)

See Also:


Attachments
fix an event re-target to support multiple shadow roots (8.17 KB, patch)
2012-05-25 02:31 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ec2-cr-linux-04 (671.45 KB, application/zip)
2012-05-25 03:12 PDT, WebKit Review Bot
no flags Details
fix svg errors (8.15 KB, patch)
2012-05-25 03:28 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff
Patch for landing (8.17 KB, patch)
2012-05-27 20:15 PDT, Hayato Ito
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hayato Ito 2012-05-25 01:11:27 PDT
The current implementation (WebCore::EventDispatcher::ensureEventAncestors) does not set event's target correctly if it is applied to multiple shadow roots.
Let me upload a test case and a fix soon.
Comment 1 Hayato Ito 2012-05-25 02:31:54 PDT
Created attachment 144014 [details]
fix an event re-target to support multiple shadow roots
Comment 2 Hayato Ito 2012-05-25 02:35:29 PDT
I feed bad that shadow-dom-event-dispatching.html has badly-named functions.
It has functions from 'prepareDOMTree1' to 'prepareDOMTree8'...

I filed that as another bug. https://bugs.webkit.org/show_bug.cgi?id=87477

I also think that current shadow DOM spec should be slightly modified. Let me file it later.
Comment 3 Hayato Ito 2012-05-25 02:53:49 PDT
I filed a bug for the spec:
https://www.w3.org/Bugs/Public/show_bug.cgi?id=17177

(In reply to comment #2)
> I feed bad that shadow-dom-event-dispatching.html has badly-named functions.
> It has functions from 'prepareDOMTree1' to 'prepareDOMTree8'...
> 
> I filed that as another bug. https://bugs.webkit.org/show_bug.cgi?id=87477
> 
> I also think that current shadow DOM spec should be slightly modified. Let me file it later.
Comment 4 WebKit Review Bot 2012-05-25 03:12:21 PDT
Comment on attachment 144014 [details]
fix an event re-target to support multiple shadow roots

Attachment 144014 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/12791482

New failing tests:
svg/custom/use-elementInstance-methods.svg
svg/custom/use-elementInstance-event-target.svg
svg/custom/use-instanceRoot-as-event-target.xhtml
svg/custom/use-instanceRoot-event-bubbling.xhtml
Comment 5 WebKit Review Bot 2012-05-25 03:12:25 PDT
Created attachment 144026 [details]
Archive of layout-test-results from ec2-cr-linux-04

The attached test failures were seen while running run-webkit-tests on the chromium-ews.
Bot: ec2-cr-linux-04  Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'>  Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Comment 6 Hayato Ito 2012-05-25 03:28:54 PDT
Created attachment 144030 [details]
fix svg errors
Comment 7 Dimitri Glazkov (Google) 2012-05-25 08:25:58 PDT
Comment on attachment 144030 [details]
fix svg errors

Good catch and much cleaner resulting code. Please consider adding anime to your tests.
Comment 8 Hayato Ito 2012-05-27 19:49:07 PDT
Thank you for the review.

(In reply to comment #7)
> (From update of attachment 144030 [details])
> Good catch and much cleaner resulting code. Please consider adding anime to your tests.

It's more difficult for me to add anime characters than to fix crash bugs.
Any suggestions for anime characters are highly welcome.
Comment 9 WebKit Review Bot 2012-05-27 19:51:01 PDT
Comment on attachment 144030 [details]
fix svg errors

Rejecting attachment 144030 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1

ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).

Full output: http://queues.webkit.org/results/12850037
Comment 10 Hayato Ito 2012-05-27 20:15:52 PDT
Created attachment 144259 [details]
Patch for landing
Comment 11 WebKit Review Bot 2012-05-27 21:39:48 PDT
Comment on attachment 144259 [details]
Patch for landing

Clearing flags on attachment: 144259

Committed r118645: <http://trac.webkit.org/changeset/118645>
Comment 12 WebKit Review Bot 2012-05-27 21:39:53 PDT
All reviewed patches have been landed.  Closing bug.