Support multiple shadow roots in event dispatching. https://bugs.webkit.org/show_bug.cgi?id=87470

Reviewed by Dimitri Glazkov.

Source/WebCore:

The current implementation does not set event's target correctly
if an event happens on DOM tree with multiple shadow roots.  So
this patch updates an event re-targeting algorithm so that it
works even if it is applied to multiple shadow roots.

Tests: fast/dom/shadow/shadow-dom-event-dispatching.html

* dom/ComposedShadowTreeWalker.cpp:
(WebCore::ComposedShadowTreeWalker::traverseParentIncludingInsertionPointAndShadowRoot):
* dom/EventDispatcher.cpp:
(WebCore::EventDispatcher::ensureEventAncestors):

LayoutTests:

* fast/dom/shadow/shadow-dom-event-dispatching-expected.txt:
* fast/dom/shadow/shadow-dom-event-dispatching.html:


Canonical link: https://commits.webkit.org/105390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118645 268f45cc-cd09-0410-ab3c-d52691b4dbfc